force-app/main/default/objects/Back_Log__c/Back_Log__c.object-meta.xml
<CustomObject>
    <label>Back Log</label>
    <nameField>
        <displayFormat>BL {0000}</displayFormat>
        <label>Back Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Back Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>