force-app/main/default/objects/Back_Log__c/fields/Backlog_Type__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Type__c</fullName>
    <label>Backlog Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Feature Request</fullName>
            </value>
            <value>
                <fullName>Bug Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>