force-app/main/default/objects/Back_Log__c/fields/Description_of_Request_Concern__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Request_Concern__c</fullName>
    <label>Description of Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>