force-app/main/default/objects/Back_Log__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal (Can be resolved within weeks)</fullName>
            </value>
            <value>
                <fullName>Urgent (Mission Critical, must be resolved within 2 days)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>