force-app/main/default/objects/Back_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Backlog_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Urgency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>