force-app/main/default/objects/Back_Log__c/listViews/allSelection_Back_Log.listView-meta.xml
<ListView>
    <fullName>allSelection_Back_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>